--- a/template.html
+++ b/template.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+    <link href="main.css" rel="stylesheet" />
   </head>
   <body>
     <header role="banner">
