--- a/template.html
+++ b/template.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <title>Collect Stuff Related to JSON - JSON Blue</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link href="main.css" rel="stylesheet" />
   </head>
