--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
 <li><a href="https://www.sqlite.org/json1.html">SQLite</a></li>
 </ul>
 <h2 id="more">More</h2>
+<ul>
+<li><a href="https://www.reddit.com/r/json/">reddit r/json</a></li>
+</ul>
 <h3 id="history">History</h3>
 <ul>
 <li><p><a href="https://plus.google.com/+DouglasCrockfordEsq/posts/RK8qyGVaGSr">Comments in JSON</a></p>
