Add JOSE impl list

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 <li><a href="https://tools.ietf.org/html/rfc7517">RFC 7517</a> JSON Web Key</li>
 <li><a href="https://tools.ietf.org/html/rfc7518">RFC 7518</a> JSON Web Algorithm</li>
 <li><a href="https://tools.ietf.org/html/rfc7519">RFC 7519</a> JSON Web Token</li>
+<li><a href="https://openid.net/developers/jwt/">JWT, JWS, JWE, JWK, and JWA Implementations</a> A list maintained by OpenID foundation.</li>
 </ul>
 <h4 id="what-is-jose">What is JOSE</h4>
 <ul>
