--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p>This is JSON Blue, a small website to collect JSON stuff. Including standard document, variant data format, tools, application and some history document.</p>
 <h3 id="table-of-contents">Table of Contents</h3>
 <ul>
-<li><a href="#spec">Specification</a></li>
+<li><a href="#specification">Specification</a></li>
 <li><a href="#data-in-json-format">Data in JSON Format</a></li>
 <li><a href="#variant-format">Variant Format</a></li>
 <li><a href="#related-format">Related Format</a></li>
@@ -70,7 +70,7 @@
 <li><a href="https://github.com/benlaurie/objecthash">objecthash</a> A way to cryptographically hash objects (in the JSON-ish sense) that works cross-language. And, therefore, cross-encoding.</li>
 </ul>
 <h2 id="variant-format">Variant Format</h2>
-<p>Formats Like JSON.</p>
+<p>Formats Similar to JSON.</p>
 <ul>
 <li><a href="http://hjson.org/">Hjson</a> is a syntax extension to JSON. It's NOT a proposal to replace JSON or to incorporate it into the JSON spec itself. It's intended to be used like a user interface for humans, to read and edit before passing the JSON data to the machine.</li>
 <li><a href="https://code.google.com/archive/p/rson/">RSON</a> file format is easy to edit, diff, and version control, that is a superset of JSON and smaller than YAML.</li>
@@ -83,7 +83,7 @@
 <li><a href="https://github.com/lightbend/config/blob/master/HOCON.md">HOCON(Human-Optimized Config Object Notation)</a> is a format for human-readable data, and a superset of JSON and .properties.</li>
 </ul>
 <h2 id="related-format">Related Format</h2>
-<p>Not like JSON, but related to it.</p>
+<p>Not Similar to JSON, but related to it.</p>
 <h3 id="binary">Binary</h3>
 <ul>
 <li><a href="https://msgpack.org/">MessagePack</a> is an efficient binary serialization format. It lets you exchange data among multiple languages like JSON.</li>
@@ -144,6 +144,14 @@
 <ul>
 <li><a href="https://www.reddit.com/r/json/">reddit r/json</a></li>
 </ul>
+<h3 id="article">Article</h3>
+<ul>
+<li><a href="https://arp242.net/weblog/json_as_configuration_files-_please_dont?">JSON as configuration files: please don’t</a></li>
+</ul>
+<h3 id="ecmascript">ECMAScript</h3>
+<ul>
+<li><a href="https://github.com/tc39/proposal-json-superset">Subsume JSON</a> A proposal to extend ECMA-262 syntax into a superset of JSON.</li>
+</ul>
 <h3 id="history">History</h3>
 <ul>
 <li><p><a href="https://plus.google.com/+DouglasCrockfordEsq/posts/RK8qyGVaGSr">Comments in JSON</a></p>
@@ -153,7 +161,6 @@
 <p>Suppose you are using JSON to keep configuration files, which you would like to annotate. Go ahead and insert all the comments you like. Then pipe it through JSMin before handing it to your JSON parser.</p>
 </blockquote>
 <p><cite>Douglas Crockford</cite></p></li>
-<li><p><a href="https://github.com/tc39/proposal-json-superset">Subsume JSON</a> A proposal to extend ECMA-262 syntax into a superset of JSON.</p></li>
 </ul>
 <h2 id="blue">Blue?</h2>
 <p>Its hard to find a good domain available. And I love the color blue. Also, I am a fan of Dragon Ball. Super Saiyan Blue is very powerful. So I take the name.</p>
