--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
 <ul>
 <li><a href="https://www.mongodb.com/">MongoDB</a></li>
 <li><a href="http://couchdb.apache.org/">CouchDB</a></li>
-<li><a href="https://www.postgresql.org/docs/10/static/datatype-json.html">PostgreDB</a>,</li>
-<li><a href="https://www.postgresql.org/docs/9.5/static/functions-json.html">functions and operators</a></li>
+<li><a href="https://www.postgresql.org/docs/10/static/datatype-json.html">PostgreDB</a>, <a href="https://www.postgresql.org/docs/9.5/static/functions-json.html">functions and operators</a></li>
 <li><a href="https://www.sqlite.org/json1.html">SQLite</a></li>
 </ul>
 <h2 id="more">More</h2>
