Add JOSE to encryption

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 </ul>
 <h3 id="encryption">Encryption</h3>
 <ul>
+<li><a href="#jose-json-object-signing-and-encryption-working-group">JOSE</a></li>
 <li><a href="https://github.com/benlaurie/objecthash">objecthash</a> A way to cryptographically hash objects (in the JSON-ish sense) that works cross-language. And, therefore, cross-encoding.</li>
 </ul>
 <h2 id="variant-format">Variant Format</h2>
