--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <h1 id="json-blue">JSON Blue</h1>
 <p>A place to collect stuff related to JSON</p>
-<p>This is JSON Blue, a small website to collect JSON stuff. Including standard document, variant data format, tools, application and some history document.</p>
+<p>This is JSON Blue, a small website to collect JSON stuff. Including standard document, variant data format, tools, application and some history document. IF you found anything missing and deserver to list on here. Please <a href="https://github.com/othree/json-blue/issues">report an issue</a> on GitHub.</p>
 <h3 id="table-of-contents">Table of Contents</h3>
 <ul>
 <li><a href="#specification">Specification</a></li>
@@ -24,13 +24,14 @@
 <li><a href="#protocol">Protocol</a></li>
 <li><a href="#tool">Tool</a></li>
 <li><a href="#application">Application</a></li>
-<li><a href="#db">Database</a></li>
+<li><a href="#database">Database</a></li>
 <li><a href="#more">More</a></li>
 </ul>
 <h2 id="specification">Specification</h2>
 <h3 id="json-specs">JSON Specs</h3>
 <ul>
 <li><a href="http://json.org/">JSON</a> by Douglas Crockford. Also have a list of implementations in different languages.</li>
+<li><a href="https://commons.wikimedia.org/wiki/File:JSON_vector_logo.svg">Logo</a></li>
 <li><a href="http://www.ecma-international.org/publications/files/ECMA-ST/ECMA-404.pdf">ECMA 404</a> The JSON Data Interchange Syntax</li>
 <li><a href="https://tools.ietf.org/html/rfc4627">RFC 4627</a></li>
 <li><a href="https://tools.ietf.org/html/rfc7493">RFC 7493</a> I-JSON(Internet JSON) is a restricted profile of JSON designed to maximize interoperability and increase confidence that software can process it successfully with predictable results.</li>
@@ -85,6 +86,9 @@
 </ul>
 <h2 id="related-format">Related Format</h2>
 <p>Not Similar to JSON, but related to it.</p>
+<ul>
+<li><a href="https://github.com/henry-luo/mark">Mark</a> is a new unified notation for both object and markup data. The notation is a superset of what can be represented by JSON, HTML and XML, but overcomes many limitations these popular data formats, yet still having a very clean syntax and simple data model.</li>
+</ul>
 <h3 id="binary">Binary</h3>
 <ul>
 <li><a href="https://msgpack.org/">MessagePack</a> is an efficient binary serialization format. It lets you exchange data among multiple languages like JSON.</li>
@@ -112,6 +116,14 @@
 <li><a href="http://netflix.github.io/falcor/documentation/jsongraph.html">JSON Graph</a> is a convention for modeling graph information as a JSON object. Applications that use Falcor represent all their domain data as a single JSON Graph object.</li>
 </ul>
 <h2 id="tool">Tool</h2>
+<ul>
+<li><a href="http://jsoniq.org/">JSONiq</a> is a query and processing language specifically designed for the popular JSON data model.</li>
+<li><a href="https://benjamine.github.io/jsondiffpatch/demo/index.html">JSONDiffPatch</a></li>
+<li><a href="https://jsonlint.com/">JSONLint</a></li>
+<li><a href="https://jsonformatter.curiousconcept.com/">JSON Formatter</a> was created to help with debugging. As JSON data is often output without line breaks to save space, it is extremely difficult to actually read and make sense of it.</li>
+<li><a href="https://stedolan.github.io/jq/">jq</a> is like sed for JSON data - you can use it to slice and filter and map and transform structured data with the same ease that sed, awk, grep and friends let you play with text.</li>
+<li><a href="https://github.com/tomnomnom/gron">gron</a> transforms JSON into discrete assignments to make it easier to grep for what you want and see the absolute 'path' to it.</li>
+</ul>
 <h2 id="application">Application</h2>
 <h3 id="jose-json-object-signing-and-encryption-working-group">JOSE (JSON Object Signing and Encryption) Working Group</h3>
 <ul>
@@ -133,7 +145,7 @@
 <ul>
 <li><a href="https://paseto.io/">PASETO</a> is everything you love about JOSE (JWT, JWE, JWS) without any of the many designed deficits that plague the JOSE standards.</li>
 </ul>
-<h2 id="db">DB</h2>
+<h2 id="database">Database</h2>
 <ul>
 <li><a href="https://www.mongodb.com/">MongoDB</a></li>
 <li><a href="http://couchdb.apache.org/">CouchDB</a></li>
@@ -146,6 +158,7 @@
 </ul>
 <h3 id="article">Article</h3>
 <ul>
+<li><a href="http://seriot.ch/parsing_json.php">Parsing JSON is a Minefield 💣</a></li>
 <li><a href="https://arp242.net/weblog/json_as_configuration_files-_please_dont?">JSON as configuration files: please don’t</a></li>
 </ul>
 <h3 id="ecmascript">ECMAScript</h3>
