--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <h1 id="json-blue">JSON Blue</h1>
 <p>A place to collect stuff related to JSON</p>
-<p>This is JSON Blue, a small website to collect JSON stuff. Including standard document, variant data format, tools, application and some history document. IF you found anything missing and deserver to list on here. Please <a href="https://github.com/othree/json-blue/issues">report an issue</a> on GitHub.</p>
+<p>This is JSON Blue, a small website to collect JSON stuff. Including standard document, variant data format, tools, application and some history document. If you found anything missing and deserver to list on here. Please <a href="https://github.com/othree/json-blue/issues">report an issue</a> on GitHub.</p>
 <h3 id="table-of-contents">Table of Contents</h3>
 <ul>
 <li><a href="#specification">Specification</a></li>
@@ -181,7 +181,7 @@
 
     </main>
     <footer>
-      
+      A site by <a href="https://othree.net">othree</a>.
     </footer>
   </body>
 </html>
