--- a/template.html
+++ b/template.html
@@ -18,5 +18,15 @@
     <footer>
       A site by <a href="https://othree.net">othree</a>.
     </footer>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123337918-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-123337918-1');
+    </script>
+
   </body>
 </html>
