--- a/template.html
+++ b/template.html
@@ -16,7 +16,7 @@
 
     </main>
     <footer>
-      A site by <a href="https://othree.net">othree</a>.
+      Made with &lt;3 by <a href="https://othree.net">othree</a>.
     </footer>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123337918-1"></script>
