--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
 <li><a href="https://jsonformatter.curiousconcept.com/">JSON Formatter</a> was created to help with debugging. As JSON data is often output without line breaks to save space, it is extremely difficult to actually read and make sense of it.</li>
 <li><a href="https://stedolan.github.io/jq/">jq</a> is like sed for JSON data - you can use it to slice and filter and map and transform structured data with the same ease that sed, awk, grep and friends let you play with text.</li>
 <li><a href="https://github.com/tomnomnom/gron">gron</a> transforms JSON into discrete assignments to make it easier to grep for what you want and see the absolute ‘path’ to it.</li>
+<li><a href="https://www.json-generator.com/">JSON Generator</a> tool for generate random JSON data.</li>
+<li><a href="https://github.com/antonmedv/fx">fx</a> is another command-line JSON processing tool.</li>
 </ul>
 <h2 id="application">Application</h2>
 <h3 id="jose-json-object-signing-and-encryption-working-group">JOSE (JSON Object Signing and Encryption) Working Group</h3>
