--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <li><a href="https://www.w3.org/TR/sparql11-results-json/">SPARQL</a> is a set of standards for the query and update of RDF data, along with ways to access such data over the web. This document describes the representation of SELECT and ASK query results using JSON.</li>
 <li><a href="https://www.w3.org/TR/covjson-overview/">CoverageJSON</a> is a data format for describing “coverage” data in JavaScript Object Notation (JSON), and provides an overview of its design and capabilities.</li>
 <li><a href="netjson.org/">NetJSON</a> is a data interchange format based on JavaScript Object Notation (JSON) designed to describe the basic building blocks of layer2 and layer3 networking.</li>
+<li><a href="https://github.com/OAI/OpenAPI-Specification">OpenAPI</a> defines a standard, programming language-agnostic interface description for REST APIs</li>
 </ul>
 <h3 id="valdation">Valdation</h3>
 <ul>
