Add comment in first edition and video from Douglas

--- a/index.html
+++ b/index.html
@@ -178,13 +178,14 @@
 </ul>
 <h3 id="history">History</h3>
 <ul>
-<li><p><a href="https://plus.google.com/+DouglasCrockfordEsq/posts/RK8qyGVaGSr">Comments in JSON</a></p>
+<li><p><a href="https://plus.google.com/+DouglasCrockfordEsq/posts/RK8qyGVaGSr">Comments in JSON</a> exists <a href="https://web.archive.org/web/20030228034147/http://www.crockford.com/JSON/index.html">at first</a></p>
 <blockquote>
 <p><strong>Comments in JSON</strong></p>
 <p>I removed comments from JSON because I saw people were using them to hold parsing directives, a practice which would have destroyed interoperability. I know that the lack of comments makes some people sad, but it shouldn’t.</p>
 <p>Suppose you are using JSON to keep configuration files, which you would like to annotate. Go ahead and insert all the comments you like. Then pipe it through JSMin before handing it to your JSON parser.</p>
 </blockquote>
 <p><cite>Douglas Crockford</cite></p></li>
+<li><p><a href="https://www.youtube.com/watch?v=kc8BAR7SHJI">Discovering JavaScript Object Notation with Douglas Crockford</a></p></li>
 </ul>
 <h2 id="blue">Blue?</h2>
 <p>Its hard to find a good domain available. And I love the color blue. Also, I am a fan of Dragon Ball. Super Saiyan Blue is very powerful. So I take the name.</p>
