--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <li><a href="https://www.w3.org/TR/covjson-overview/">CoverageJSON</a> is a data format for describing “coverage” data in JavaScript Object Notation (JSON), and provides an overview of its design and capabilities.</li>
 <li><a href="netjson.org/">NetJSON</a> is a data interchange format based on JavaScript Object Notation (JSON) designed to describe the basic building blocks of layer2 and layer3 networking.</li>
 <li><a href="https://github.com/OAI/OpenAPI-Specification">OpenAPI</a> defines a standard, programming language-agnostic interface description for REST APIs</li>
+<li><a href="https://jsonfeed.org/">JSON Feed</a> a format similar to RSS and Atom but in JSON.</li>
 </ul>
 <h3 id="valdation">Valdation</h3>
 <ul>
