Add JSON Schema and Typedef

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 <li><a href="https://tools.ietf.org/html/rfc6901">RFC 6901</a> JSON Pointer</li>
 <li><a href="https://tools.ietf.org/html/rfc6902">RFC 6902</a> JSON Patch</li>
 <li><a href="https://tools.ietf.org/html/rfc7396">RFC 7396</a> JSON Merge Patch</li>
+<li><a href="https://tools.ietf.org/html/rfc8927">RFC 8927</a> <a href="https://jsontypedef.com/">JSON Typedef</a></li>
+<li><a href="https://json-schema.org/">JSON Schema</a></li>
 </ul>
 <h3 id="more-at-rfc">More at RFC</h3>
 <ul>
@@ -133,6 +135,8 @@
 <li><a href="https://github.com/tomnomnom/gron">gron</a> transforms JSON into discrete assignments to make it easier to grep for what you want and see the absolute ‘path’ to it.</li>
 <li><a href="https://www.json-generator.com/">JSON Generator</a> tool for generate random JSON data.</li>
 <li><a href="https://github.com/antonmedv/fx">fx</a> is another command-line JSON processing tool.</li>
+<li><a href="https://ajv.js.org/">Ajv</a> JSON validation tool supports JSON Schema and JSON Typedef</li>
+<li><a href="https://jsontypedef.com/docs/">JSON Typedef tools</a></li>
 </ul>
 <h2 id="application">Application</h2>
 <h3 id="jose-json-object-signing-and-encryption-working-group">JOSE (JSON Object Signing and Encryption) Working Group</h3>
