--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 <li><a href="https://github.com/antonmedv/fx">fx</a> is another command-line JSON processing tool.</li>
 <li><a href="https://ajv.js.org/">Ajv</a> JSON validation tool supports JSON Schema and JSON Typedef</li>
 <li><a href="https://jsontypedef.com/docs/">JSON Typedef tools</a></li>
+<li><a href="https://jless.io/">jless</a></li>
 </ul>
 <h2 id="application">Application</h2>
 <h3 id="jose-json-object-signing-and-encryption-working-group">JOSE (JSON Object Signing and Encryption) Working Group</h3>
