Add CBOR and Schemas

--- a/index.html
+++ b/index.html
@@ -59,9 +59,26 @@ Pointer</li>
 Patch</li>
 <li><a href="https://tools.ietf.org/html/rfc7396">RFC 7396</a> JSON
 Merge Patch</li>
+</ul>
+<h2 id="schema">Schema</h2>
+<ul>
+<li><a href="https://tools.ietf.org/html/rfc8610">RFC 8610</a> CDDL:
+Concise Data Definition Language</li>
 <li><a href="https://tools.ietf.org/html/rfc8927">RFC 8927</a> <a
 href="https://jsontypedef.com/">JSON Typedef</a></li>
-<li><a href="https://json-schema.org/">JSON Schema</a></li>
+<li><a href="http://json-schema.org/">JSON Schema</a> is a vocabulary
+that allows you to annotate and validate JSON documents. <a
+href="http://json-schema.org/implementations.html">Implementations</a>.</li>
+<li><a href="https://github.com/adobe/jsonschema2md">JSON Schema
+Markdown Tools</a> makes it easier by providing a number of scripts that
+can turn JSON Schema files into readable Markdown documentation that is
+ready for consumption on GitHub or processed using Jekyll or other
+static site generators.</li>
+<li><a href="https://www.tjson.org/">TJSON(Tagged JSON)</a> s a tagging
+scheme/microformat for enriching the types that can be stored in JSON
+documents. It augments the existing types present in JSON, codifiying ad
+hoc practices already commonly used for processing JSON into a
+schema-free, self-describing format.</li>
 </ul>
 <h3 id="more-at-rfc">More at RFC</h3>
 <ul>
@@ -107,22 +124,6 @@ for REST APIs</li>
 RSS and Atom but in JSON.</li>
 <li><a href="https://github.com/obsidianmd/jsoncanvas">JSON Canvas</a>
 an open file format for infinite canvas data.</li>
-</ul>
-<h3 id="valdation">Valdation</h3>
-<ul>
-<li><a href="http://json-schema.org/">JSON Schema</a> is a vocabulary
-that allows you to annotate and validate JSON documents. <a
-href="http://json-schema.org/implementations.html">Implementations</a>.</li>
-<li><a href="https://github.com/adobe/jsonschema2md">JSON Schema
-Markdown Tools</a> makes it easier by providing a number of scripts that
-can turn JSON Schema files into readable Markdown documentation that is
-ready for consumption on GitHub or processed using Jekyll or other
-static site generators.</li>
-<li><a href="https://www.tjson.org/">TJSON(Tagged JSON)</a> s a tagging
-scheme/microformat for enriching the types that can be stored in JSON
-documents. It augments the existing types present in JSON, codifiying ad
-hoc practices already commonly used for processing JSON into a
-schema-free, self-describing format.</li>
 </ul>
 <h3 id="encryption">Encryption</h3>
 <ul>
@@ -178,6 +179,16 @@ clean syntax and simple data model.</li>
 </ul>
 <h3 id="binary">Binary</h3>
 <ul>
+<li><a href="https://tools.ietf.org/html/rfc8949">RFC 8949</a> <a
+href="https://cbor.io/">CBOR</a>: Concise Binary Object Representation
+<ul>
+<li><a href="https://tools.ietf.org/html/rfc8152">RFC 8152</a> COSE:
+CBOR Object Signing and Encryption</li>
+<li><a href="https://tools.ietf.org/html/rfc8392">RFC 8392</a> CWT: CBOR
+Web Token</li>
+<li><a href="https://tools.ietf.org/html/rfc8610">RFC 8610</a> CDDL:
+Concise Data Definition Language</li>
+</ul></li>
 <li><a href="https://msgpack.org/">MessagePack</a> is an efficient
 binary serialization format. It lets you exchange data among multiple
 languages like JSON.</li>
