--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ an issue</a> on GitHub.</p>
 <h3 id="table-of-contents">Table of Contents</h3>
 <ul>
 <li><a href="#specification">Specification</a></li>
+<li><a href="＃schemas">Schemas</a></li>
 <li><a href="#data-in-json-format">Data in JSON Format</a></li>
 <li><a href="#variant-format">Variant Format</a></li>
 <li><a href="#related-format">Related Format</a></li>
@@ -60,7 +61,13 @@ Patch</li>
 <li><a href="https://tools.ietf.org/html/rfc7396">RFC 7396</a> JSON
 Merge Patch</li>
 </ul>
-<h2 id="schema">Schema</h2>
+<h3 id="more-at-rfc">More at RFC</h3>
+<ul>
+<li><a
+href="https://www.rfc-editor.org/search/rfc_search_detail.php?page=All&amp;title=JSON&amp;pubstatus%5B%5D=Any&amp;pub_date_type=any&amp;sortkey=Number&amp;sorting=ASC">Search
+JSON at RFC Editor</a></li>
+</ul>
+<h2 id="schemas">Schemas</h2>
 <ul>
 <li><a href="https://tools.ietf.org/html/rfc8610">RFC 8610</a> CDDL:
 Concise Data Definition Language</li>
@@ -79,12 +86,6 @@ scheme/microformat for enriching the types that can be stored in JSON
 documents. It augments the existing types present in JSON, codifiying ad
 hoc practices already commonly used for processing JSON into a
 schema-free, self-describing format.</li>
-</ul>
-<h3 id="more-at-rfc">More at RFC</h3>
-<ul>
-<li><a
-href="https://www.rfc-editor.org/search/rfc_search_detail.php?page=All&amp;title=JSON&amp;pubstatus%5B%5D=Any&amp;pub_date_type=any&amp;sortkey=Number&amp;sorting=ASC">Search
-JSON at RFC Editor</a></li>
 </ul>
 <h2 id="data-in-json-format">Data in JSON Format</h2>
 <ul>
