--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@ JSON at RFC Editor</a></li>
 </ul>
 <h2 id="schemas">Schemas</h2>
 <ul>
+<li><a href="https://tools.ietf.org/html/rfc8785">RFC 8785</a> <a
+href="https://github.com/cyberphone/json-canonicalization">JCS</a>: JSON
+Canonicalization Scheme</li>
 <li><a href="https://tools.ietf.org/html/rfc8610">RFC 8610</a> CDDL:
 Concise Data Definition Language</li>
 <li><a href="https://tools.ietf.org/html/rfc8927">RFC 8927</a> <a
@@ -96,6 +99,8 @@ JSON Format for iCalendar</li>
 <li><a href="https://tools.ietf.org/html/rfc7946">RFC 7946</a> <a
 href="http://geojson.org/">GeoJSON</a> is a format for encoding a
 variety of geographic data structures.</li>
+<li><a href="https://tools.ietf.org/html/rfc8984">RFC 8984</a>
+JSCalendar: A JSON Representation of Calendar Data</li>
 <li><a href="https://github.com/topojson/topojson">TopoJSON</a> is an
 extension of GeoJSON that encodes topology.</li>
 <li><a href="https://json-ld.org/">JSON-LD</a> is a lightweight Linked
