Update JSON Canvas and rebuild

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ an issue</a> on GitHub.</p>
 <h3 id="table-of-contents">Table of Contents</h3>
 <ul>
 <li><a href="#specification">Specification</a></li>
-<li><a href="＃schemas">Schemas</a></li>
+<li><a href="#schemas">Schemas</a></li>
 <li><a href="#data-in-json-format">Data in JSON Format</a></li>
 <li><a href="#variant-format">Variant Format</a></li>
 <li><a href="#related-format">Related Format</a></li>
@@ -60,6 +60,8 @@ Pointer</li>
 Patch</li>
 <li><a href="https://tools.ietf.org/html/rfc7396">RFC 7396</a> JSON
 Merge Patch</li>
+<li><a href="https://tools.ietf.org/html/rfc9535">RFC 9535</a> JSONPath:
+Query Expressions for JSON</li>
 </ul>
 <h3 id="more-at-rfc">More at RFC</h3>
 <ul>
@@ -128,8 +130,8 @@ defines a standard, programming language-agnostic interface description
 for REST APIs</li>
 <li><a href="https://jsonfeed.org/">JSON Feed</a> a format similar to
 RSS and Atom but in JSON.</li>
-<li><a href="https://github.com/obsidianmd/jsoncanvas">JSON Canvas</a>
-an open file format for infinite canvas data.</li>
+<li><a href="https://jsoncanvas.org/">JSON Canvas</a> an open file
+format for infinite canvas data.</li>
 </ul>
 <h3 id="encryption">Encryption</h3>
 <ul>
@@ -173,6 +175,10 @@ superset of JSON and .properties.</li>
 <li><a href="https://rison.io/">Rison</a> is a data format focus on URL
 friendly and compact. The structure is like JSON, but use different
 character for notation.</li>
+<li><a
+href="https://code.visualstudio.com/docs/languages/json#_json-with-comments">JSONC</a>
+JSON with Comments. <a
+href="https://github.com/microsoft/node-jsonc-parser">parser</a></li>
 </ul>
 <h2 id="related-format">Related Format</h2>
 <p>Not Similar to JSON, but related to it.</p>
